claude-04-[7/28 10:31PM]: modify {{filePath}} [COMPLEX:6 files]

--- a/prototype/pages/members.html
+++ b/prototype/pages/members.html
@@ -1,6 +1,6 @@
         <div class="page-container nebula-background">
             <!-- Load members-specific CSS -->
-            <script src="../js/members-css-loader.js"></script>
+            <script src="js/members-css-loader.js"></script>
             
             <!-- Nebula backgrounds handled by CSS -->
             <div class="nebula-middle"></div>
