claude-02-[7/28 11:06PM]: modify {{filePath}} [COMPLEX:6 files]

--- a/prototype/pages/members.html
+++ b/prototype/pages/members.html
@@ -175,7 +175,7 @@
                 </div>
 
                 <!-- Members Grid -->
-                <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(320px, 1fr)); gap: 1.5rem; max-width: 1200px; margin: 0 auto; align-items: stretch;">
+                <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
                     <!-- Machine Learning Expert Card -->
                     <div class="minimal-card mentor-card pt-1 rounded-lg transition-all group cursor-pointer" onclick="bookSession()" style="background: rgba(26, 26, 26, 0.8); backdrop-filter: blur(10px); -webkit-backdrop-filter: blur(10px); border: 1px solid rgba(217, 70, 160, 0.3); border-radius: 8px; position: relative; z-index: 10; overflow: hidden; box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15); padding: 16px 16px 8px;">
                         <!-- Type label -->
