--- a/prototype/index.html
+++ b/prototype/index.html
@@ -103,6 +103,21 @@
     <link rel="stylesheet" href="css/badge-gap-fix.css">
     <link rel="stylesheet" href="css/force-4px-badge-gap.css">
     <style>
+        /* Force Tailwind grid classes to work properly */
+        @media (min-width: 1024px) {
+            .lg\:grid-cols-3 {
+                grid-template-columns: repeat(3, minmax(0, 1fr)) !important;
+            }
+        }
+        @media (min-width: 768px) {
+            .md\:grid-cols-2 {
+                grid-template-columns: repeat(2, minmax(0, 1fr)) !important;
+            }
+        }
+        .grid-cols-1 {
+            grid-template-columns: repeat(1, minmax(0, 1fr)) !important;
+        }
+        
         /* Logo animation with dual letters */
         .logo-pulse {
             animation: letterRotate 14s linear infinite;
