--- a/prototype/pages/members.html
+++ b/prototype/pages/members.html
@@ -1,6 +1,7 @@
         <div class="page-container nebula-background">
             <!-- Load members-specific CSS -->
             <script src="js/members-css-loader.js"></script>
+            <script src="js/force-members-grid.js"></script>
             
             <!-- Nebula backgrounds handled by CSS -->
             <div class="nebula-middle"></div>
@@ -175,7 +176,32 @@
                 </div>
 
                 <!-- Members Grid -->
-                <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
+                <style>
+                    @media (min-width: 1024px) {
+                        .members-grid {
+                            display: grid !important;
+                            grid-template-columns: repeat(3, minmax(0, 1fr)) !important;
+                            gap: 1.5rem !important;
+                            max-width: 1200px !important;
+                            margin: 0 auto !important;
+                        }
+                    }
+                    @media (min-width: 768px) and (max-width: 1023px) {
+                        .members-grid {
+                            display: grid !important;
+                            grid-template-columns: repeat(2, minmax(0, 1fr)) !important;
+                            gap: 1.5rem !important;
+                        }
+                    }
+                    @media (max-width: 767px) {
+                        .members-grid {
+                            display: grid !important;
+                            grid-template-columns: 1fr !important;
+                            gap: 1.5rem !important;
+                        }
+                    }
+                </style>
+                <div class="members-grid">
                     <!-- Machine Learning Expert Card -->
                     <div class="minimal-card mentor-card pt-1 rounded-lg transition-all group cursor-pointer" onclick="bookSession()" style="background: rgba(26, 26, 26, 0.8); backdrop-filter: blur(10px); -webkit-backdrop-filter: blur(10px); border: 1px solid rgba(217, 70, 160, 0.3); border-radius: 8px; position: relative; z-index: 10; overflow: hidden; box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15); padding: 16px 16px 8px;">
                         <!-- Type label -->
