claude-07-[7/28 11:24PM]: modify {{filePath}} [MEDIUM:5 files]

--- a/prototype/pages/members.html
+++ b/prototype/pages/members.html
@@ -177,28 +177,35 @@
 
                 <!-- Members Grid -->
                 <style>
+                    .members-grid {
+                        display: grid !important;
+                        gap: 1.5rem !important;
+                        max-width: 1200px !important;
+                        margin: 0 auto !important;
+                        width: 100% !important;
+                    }
+                    
                     @media (min-width: 1024px) {
                         .members-grid {
-                            display: grid !important;
-                            grid-template-columns: repeat(3, minmax(0, 1fr)) !important;
-                            gap: 1.5rem !important;
-                            max-width: 1200px !important;
-                            margin: 0 auto !important;
+                            grid-template-columns: repeat(3, minmax(320px, 1fr)) !important;
                         }
                     }
                     @media (min-width: 768px) and (max-width: 1023px) {
                         .members-grid {
-                            display: grid !important;
-                            grid-template-columns: repeat(2, minmax(0, 1fr)) !important;
-                            gap: 1.5rem !important;
+                            grid-template-columns: repeat(2, minmax(320px, 1fr)) !important;
                         }
                     }
                     @media (max-width: 767px) {
                         .members-grid {
-                            display: grid !important;
                             grid-template-columns: 1fr !important;
-                            gap: 1.5rem !important;
                         }
+                    }
+                    
+                    /* Ensure cards don't collapse */
+                    .members-grid .minimal-card {
+                        width: 100% !important;
+                        max-width: 400px !important;
+                        margin: 0 auto !important;
                     }
                 </style>
                 <div class="members-grid">
