claude-08-[7/28 11:29PM]: modify {{filePath}} [MEDIUM:3 files]

--- a/prototype/pages/members.html
+++ b/prototype/pages/members.html
@@ -1,4 +1,4 @@
-        <div class="page-container nebula-background">
+        <div class="nebula-background" style="padding-top: 5.5rem; padding-bottom: 4rem; position: relative; overflow: visible;">
             <!-- Load members-specific CSS -->
             <script src="js/members-css-loader.js"></script>
             <script src="js/force-members-grid.js"></script>
@@ -383,4 +383,4 @@
                     
                 </div>
             </div>
-        </div> <!-- End page-container -->
+        </div> <!-- End nebula-background -->
