claude-04-[7/30 10:37AM]: modify {{filePath}} [MEDIUM:3 files]

--- a/demo/design-system-showcase.html
+++ b/demo/design-system-showcase.html
@@ -1081,9 +1081,9 @@
                     <!-- Default Secondary Card -->
                     <div class="vybe-card relative overflow-hidden" style="width: 280px; height: 160px; border: 1px solid rgba(138, 43, 226, 0.2);">
                         <!-- Top-left corner accent -->
-                        <div class="absolute" style="top: -1px; left: -1px; width: 40px; height: 40px; background: linear-gradient(135deg, #8a2be2 0%, transparent 60%); opacity: 0.6;"></div>
+                        <div class="absolute" style="top: 0; left: 0; width: 80px; height: 80px; background: linear-gradient(135deg, rgba(138, 43, 226, 1) 0%, rgba(138, 43, 226, 0.6) 30%, rgba(138, 43, 226, 0.3) 60%, transparent 100%); pointer-events: none;"></div>
                         <!-- Bottom-right corner accent -->
-                        <div class="absolute" style="bottom: -1px; right: -1px; width: 40px; height: 40px; background: linear-gradient(-45deg, #8a2be2 0%, transparent 60%); opacity: 0.3;"></div>
+                        <div class="absolute" style="bottom: 0; right: 0; width: 80px; height: 80px; background: linear-gradient(-45deg, rgba(138, 43, 226, 0.8) 0%, rgba(138, 43, 226, 0.5) 30%, rgba(138, 43, 226, 0.2) 60%, transparent 100%); pointer-events: none;"></div>
                         <div style="padding: 1.25rem;">
                             <h3 class="text-base font-semibold text-white" style="margin-bottom: 0.75rem;">
                                 Secondary Default
@@ -1109,9 +1109,9 @@
                     <!-- Pink Secondary Card -->
                     <div class="vybe-card relative overflow-hidden" style="width: 280px; height: 160px; border: 1px solid rgba(217, 70, 160, 0.4);">
                         <!-- Top-left corner accent -->
-                        <div class="absolute" style="top: -1px; left: -1px; width: 40px; height: 40px; background: linear-gradient(135deg, #d946a0 0%, transparent 60%); opacity: 0.6;"></div>
+                        <div class="absolute" style="top: 0; left: 0; width: 80px; height: 80px; background: linear-gradient(135deg, rgba(217, 70, 160, 1) 0%, rgba(217, 70, 160, 0.6) 30%, rgba(217, 70, 160, 0.3) 60%, transparent 100%); pointer-events: none;"></div>
                         <!-- Bottom-right corner accent -->
-                        <div class="absolute" style="bottom: -1px; right: -1px; width: 40px; height: 40px; background: linear-gradient(-45deg, #d946a0 0%, transparent 60%); opacity: 0.3;"></div>
+                        <div class="absolute" style="bottom: 0; right: 0; width: 80px; height: 80px; background: linear-gradient(-45deg, rgba(217, 70, 160, 0.8) 0%, rgba(217, 70, 160, 0.5) 30%, rgba(217, 70, 160, 0.2) 60%, transparent 100%); pointer-events: none;"></div>
                         <div style="padding: 1.25rem;">
                             <h3 class="text-base font-semibold text-white" style="margin-bottom: 0.75rem;">
                                 Secondary Pink
@@ -1123,9 +1123,9 @@
                     <!-- Orange Secondary Card -->
                     <div class="vybe-card relative overflow-hidden" style="width: 280px; height: 160px; border: 1px solid rgba(233, 107, 58, 0.25);">
                         <!-- Top-left corner accent -->
-                        <div class="absolute" style="top: -1px; left: -1px; width: 40px; height: 40px; background: linear-gradient(135deg, #e96b3a 0%, transparent 60%); opacity: 0.6;"></div>
+                        <div class="absolute" style="top: 0; left: 0; width: 80px; height: 80px; background: linear-gradient(135deg, rgba(233, 107, 58, 1) 0%, rgba(233, 107, 58, 0.6) 30%, rgba(233, 107, 58, 0.3) 60%, transparent 100%); pointer-events: none;"></div>
                         <!-- Bottom-right corner accent -->
-                        <div class="absolute" style="bottom: -1px; right: -1px; width: 40px; height: 40px; background: linear-gradient(-45deg, #e96b3a 0%, transparent 60%); opacity: 0.3;"></div>
+                        <div class="absolute" style="bottom: 0; right: 0; width: 80px; height: 80px; background: linear-gradient(-45deg, rgba(233, 107, 58, 0.8) 0%, rgba(233, 107, 58, 0.5) 30%, rgba(233, 107, 58, 0.2) 60%, transparent 100%); pointer-events: none;"></div>
                         <div style="padding: 1.25rem;">
                             <h3 class="text-base font-semibold text-white" style="margin-bottom: 0.75rem;">
                                 Secondary Orange
