--- a/demo/design-system-showcase.html
+++ b/demo/design-system-showcase.html
@@ -1092,7 +1092,7 @@
                     </div>
                     
                     <!-- Gradient Secondary Card -->
-                    <div class="vybe-card relative overflow-hidden" style="width: 280px; height: 160px; border: 1px solid; border-image: linear-gradient(135deg, rgba(138, 43, 226, 0.3), rgba(217, 70, 160, 0.3), rgba(233, 107, 58, 0.3)) 1;">
+                    <div class="vybe-card relative overflow-hidden" style="width: 280px; height: 160px; border: 1px solid; border-image: linear-gradient(135deg, rgba(138, 43, 226, 0.3), rgba(217, 70, 160, 0.3), rgba(233, 107, 58, 0.3)) 1; border-radius: 8px;">
                         <div style="padding: 1.25rem;">
                             <h3 class="text-base font-semibold text-white" style="margin-bottom: 0.75rem; display: flex; align-items: center; gap: 0.5rem;">
                                 <i data-lucide="sparkles" style="width: 18px; height: 18px;"></i>
@@ -1149,7 +1149,7 @@
                     </div>
                     
                     <!-- Gradient Tertiary Card -->
-                    <div class="vybe-card relative overflow-hidden" style="width: 280px; height: 140px; border: 1px solid; border-image: linear-gradient(135deg, rgba(138, 43, 226, 0.3), rgba(217, 70, 160, 0.3), rgba(233, 107, 58, 0.3)) 1;">
+                    <div class="vybe-card relative overflow-hidden" style="width: 280px; height: 140px; border: 1px solid; border-image: linear-gradient(135deg, rgba(138, 43, 226, 0.3), rgba(217, 70, 160, 0.3), rgba(233, 107, 58, 0.3)) 1; border-radius: 8px;">
                         <div class="absolute left-0 top-0 bottom-0" style="width: 4px; background: linear-gradient(135deg, rgba(138, 43, 226, 0.8), rgba(217, 70, 160, 0.8), rgba(233, 107, 58, 0.8));"></div>
                         <div style="padding: 1rem; padding-left: 1.5rem;">
                             <h3 class="text-sm font-semibold text-white" style="margin-bottom: 0.5rem;">Tertiary Gradient</h3>
