claude-03-[7/30 11:02AM]: modify {{filePath}} [MEDIUM:4 files]

--- a/demo/design-system-showcase.html
+++ b/demo/design-system-showcase.html
@@ -1092,9 +1092,9 @@
                     </div>
                     
                     <!-- Gradient Secondary Card -->
-                    <div class="vybe-card relative overflow-hidden" style="width: 280px; height: 160px; padding: 1px; background: linear-gradient(135deg, rgba(138, 43, 226, 0.3), rgba(217, 70, 160, 0.3), rgba(233, 107, 58, 0.3)); border-radius: 8px;">
-                        <div style="background: var(--color-bg-card, #1a1b23); border-radius: 7px; height: 100%; width: 100%; display: flex; flex-direction: column;">
-                            <div style="padding: 1.25rem; flex: 1;">
+                    <div class="vybe-card relative overflow-hidden" style="width: 280px; height: 160px; border-radius: 8px; position: relative; background: rgba(255, 255, 255, 0.05); backdrop-filter: blur(10px); border: 1px solid transparent;">
+                        <div class="absolute inset-0" style="background: linear-gradient(135deg, rgba(138, 43, 226, 0.3), rgba(217, 70, 160, 0.3), rgba(233, 107, 58, 0.3)); border-radius: 8px; padding: 1px;">
+                            <div style="background: rgba(26, 27, 35, 0.8); backdrop-filter: blur(10px); border-radius: 7px; height: 100%; width: 100%; padding: 1.25rem;">
                                 <h3 class="text-base font-semibold text-white" style="margin-bottom: 0.75rem; display: flex; align-items: center; gap: 0.5rem;">
                                     <i data-lucide="sparkles" style="width: 18px; height: 18px;"></i>
                                     Secondary Gradient
@@ -1151,12 +1151,14 @@
                     </div>
                     
                     <!-- Gradient Tertiary Card -->
-                    <div class="vybe-card relative overflow-hidden" style="width: 280px; height: 140px; padding: 1px; background: linear-gradient(135deg, rgba(138, 43, 226, 0.3), rgba(217, 70, 160, 0.3), rgba(233, 107, 58, 0.3)); border-radius: 8px;">
-                        <div style="background: var(--color-bg-card, #1a1b23); border-radius: 7px; height: 100%; width: 100%; position: relative;">
-                            <div class="absolute left-0 top-0 bottom-0" style="width: 4px; background: linear-gradient(135deg, rgba(138, 43, 226, 0.8), rgba(217, 70, 160, 0.8), rgba(233, 107, 58, 0.8)); border-radius: 7px 0 0 7px;"></div>
-                            <div style="padding: 1rem; padding-left: 1.5rem;">
-                                <h3 class="text-sm font-semibold text-white" style="margin-bottom: 0.5rem;">Tertiary Gradient</h3>
-                                <p class="text-xs text-vybe-gray-400" style="line-height: 1.4;">Gradient accent for special emphasis.</p>
+                    <div class="vybe-card relative overflow-hidden" style="width: 280px; height: 140px; border-radius: 8px; position: relative; background: rgba(255, 255, 255, 0.05); backdrop-filter: blur(10px); border: 1px solid transparent;">
+                        <div class="absolute inset-0" style="background: linear-gradient(135deg, rgba(138, 43, 226, 0.3), rgba(217, 70, 160, 0.3), rgba(233, 107, 58, 0.3)); border-radius: 8px; padding: 1px;">
+                            <div style="background: rgba(26, 27, 35, 0.8); backdrop-filter: blur(10px); border-radius: 7px; height: 100%; width: 100%; position: relative;">
+                                <div class="absolute left-0 top-0 bottom-0" style="width: 4px; background: linear-gradient(135deg, rgba(138, 43, 226, 0.8), rgba(217, 70, 160, 0.8), rgba(233, 107, 58, 0.8)); border-radius: 7px 0 0 7px;"></div>
+                                <div style="padding: 1rem; padding-left: 1.5rem;">
+                                    <h3 class="text-sm font-semibold text-white" style="margin-bottom: 0.5rem;">Tertiary Gradient</h3>
+                                    <p class="text-xs text-vybe-gray-400" style="line-height: 1.4;">Gradient accent for special emphasis.</p>
+                                </div>
                             </div>
                         </div>
                     </div>
