claude-01-[7/31 08:56AM]: modify {{filePath}} [MEDIUM:5 files]

--- a/demo/design-system-showcase.html
+++ b/demo/design-system-showcase.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>VybeCoding Design System Showcase</title>
+    <title>vybecoding Design System Showcase</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=JetBrains+Mono:wght@400;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/design-tokens.css">
     <link rel="stylesheet" href="css/layers.css">
@@ -812,7 +812,7 @@
         <main id="main-content" class="relative z-10 max-w-7xl mx-auto px-6 py-12">
             <header class="text-center mb-16" role="banner">
                 <h1 class="text-5xl font-light mb-4">
-                    <span class="gradient-text" style="background: var(--gradient-vybe); -webkit-background-clip: text; background-clip: text; -webkit-text-fill-color: transparent;">VybeCoding Design System</span>
+                    <span class="gradient-text" style="background: var(--gradient-vybe); -webkit-background-clip: text; background-clip: text; -webkit-text-fill-color: transparent;">vybecoding Design System</span>
                 </h1>
                 <p class="text-xl text-vybe-gray-400">Simplified design system with unified gradient and essential colors</p>
             </header>
