claude-04-[7/31 01:41PM]: modify {{filePath}} [COMPLEX:12 files]

--- a/demo/pages/guides/submit/step1.html
+++ b/demo/pages/guides/submit/step1.html
@@ -52,7 +52,7 @@
                                         <label for="category" class="block text-sm font-medium text-gray-300 mb-2">
                                             Category <span class="text-red-500">*</span>
                                         </label>
-                                        <select id="category" class="form-select w-full px-4 py-3 rounded-lg border border-gray-700 bg-gray-800/80 text-white focus:border-vybe-purple-light focus:ring-1 focus:ring-vybe-purple-light transition-all">
+                                        <select id="category" class="w-full px-4 py-3 rounded-lg border border-gray-700 bg-gray-800/80 text-white focus:border-vybe-purple-light focus:ring-1 focus:ring-vybe-purple-light transition-all appearance-none bg-[url('data:image/svg+xml;charset=US-ASCII,<svg xmlns=\"http://www.w3.org/2000/svg\" viewBox=\"0 0 4 5\"><path fill=\"%23374151\" d=\"M2 0L0 2h4zm0 5L0 3h4z\"/></svg>')] bg-[length:12px_10px] bg-no-repeat bg-[right_12px_center]">
                                             <option value="">Select a category</option>
                                             <option value="frontend" selected>Frontend Development</option>
                                             <option value="backend">Backend Development</option>
@@ -69,7 +69,7 @@
                                         <label for="difficulty" class="block text-sm font-medium text-gray-300 mb-2">
                                             Difficulty Level
                                         </label>
-                                        <select id="difficulty" class="form-select w-full px-4 py-3 rounded-lg border border-gray-700 bg-gray-800/80 text-white focus:border-vybe-purple-light focus:ring-1 focus:ring-vybe-purple-light transition-all">
+                                        <select id="difficulty" class="w-full px-4 py-3 rounded-lg border border-gray-700 bg-gray-800/80 text-white focus:border-vybe-purple-light focus:ring-1 focus:ring-vybe-purple-light transition-all appearance-none bg-[url('data:image/svg+xml;charset=US-ASCII,<svg xmlns=\"http://www.w3.org/2000/svg\" viewBox=\"0 0 4 5\"><path fill=\"%23374151\" d=\"M2 0L0 2h4zm0 5L0 3h4z\"/></svg>')] bg-[length:12px_10px] bg-no-repeat bg-[right_12px_center]">
                                             <option value="beginner">Beginner</option>
                                             <option value="intermediate" selected>Intermediate</option>
                                             <option value="advanced">Advanced</option>
