--- a/demo/pages/guides/submit/step3.html
+++ b/demo/pages/guides/submit/step3.html
@@ -6,7 +6,7 @@
                                     <div class="w-1 h-5 bg-gradient-to-b from-vybe-purple to-vybe-pink rounded-full"></div>
                                     Write Your Content
                                 </h2>
-                                <select class="form-select w-auto min-w-[320px] px-4 py-2 rounded-lg border border-gray-700 bg-gray-800/80">
+                                <select class="w-auto min-w-[320px] px-4 py-2 rounded-lg border border-gray-700 bg-gray-800/80 text-white focus:border-vybe-purple-light focus:ring-1 focus:ring-vybe-purple-light transition-all appearance-none bg-[url('data:image/svg+xml;charset=US-ASCII,<svg xmlns=\"http://www.w3.org/2000/svg\" viewBox=\"0 0 4 5\"><path fill=\"%23374151\" d=\"M2 0L0 2h4zm0 5L0 3h4z\"/></svg>')] bg-[length:12px_10px] bg-no-repeat bg-[right_12px_center]">
                                     <option>Module 1 > Lesson 1: Introduction</option>
                                     <option>Module 1 > Lesson 2: Setup Environment</option>
                                     <option selected>Module 2 > Lesson 3: Rate Limiting</option>
